[package]
name = "wpget"
version = "0.1.0"
edition = "2024"
description = "CLI utility that downloads an image from a given URL and sets it as the wallpaper"
authors = ["Benjamin Dengler <benjamin.dengler@gmail.com>"]
repository = "https://github.com/ekx/wpget"
license = "MIT"
keywords = ["wallpaper"]
categories = ["command-line-utilities"]
exclude = [".idea/*", ".vscode/*", ".github/*"]

[dependencies]
reqwest = { version = "0.12.14", features = ["stream"] }
tokio = { version = "1.44.1", features = ["rt", "rt-multi-thread", "macros"] }
indicatif = "0.17.11"
futures-util = "0.3.31"
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
more-wallpapers = "0.4.0"
rand = "0.9.0"